# org.resformat.Viewer

./: Cargo.toml  README.md  cargo-sources.json  org.resformat.Viewer.json
res_core/: Cargo.toml
res_core/src/: color.rs  decode.rs  encode.rs  lib.rs  predict.rs
res_viewer/: Cargo.toml
res_viewer/data/: org.resformat.Viewer.desktop  org.resformat.Viewer.xml
res_viewer/src/: main.rs
res_winui/: Cargo.toml
res_winui/src/: main.rs
